# Hands-On-Functional-Programming-in-Rust

./: .gitignore  README.md
Chapter01/: Cargo.toml  README.md  intro_binding.rs  intro_datatypes.rs  intro_expressions.rs  intro_functions.rs  intro_generics.rs  intro_iterators.rs  intro_metaprogramming.rs  intro_mixoopfp.rs  intro_patterns.rs
Chapter01/metaderive/: Cargo.toml
Chapter01/metaderive/src/: lib.rs
Chapter02/: Cargo.toml
Chapter02/src/: lib.rs  main.rs
Chapter02/tests/: integration_tests.rs
Chapter03/: .gitignore  Cargo.toml  test1.txt
Chapter03/src/: analyze.rs  lib.rs  motor.rs  physics.rs
Chapter04/: Cargo.toml  gadt.rs  generics.rs  lifetimes.rs  parameters.rs  polymorphism.rs  serialize.rs
Chapter04/src/: analyze.rs  lib.rs  motor.rs  physics.rs
Chapter05/: Cargo.toml  README.md  build.rs
Chapter05/src/: analyze_trip.rs  buildings.rs  data_recorder.rs  data_recorders.rs  elevator2.c  elevator3.c  elevator_drivers.rs  lib.rs  motion_controllers.rs  motor1.c  motor2.c  motor3.c  motor_controllers.rs  operate_elevator.rs  physics.rs  simulate_trip.rs  trip_planning.rs
Chapter06/: Cargo.toml  build.rs  mutability.rs  pure_functions.rs
Chapter06/fixed/: Cargo.toml
Chapter06/fixed/src/: admin.rs  elevator_magic.c
Chapter06/fixed/src/tests/: admin.rs  magic.rs  mod.rs
Chapter06/src/: admin.rs  elevator_magic.c  lib.rs  magic.c  magic.rs  tests.rs
Chapter06/src/tests/: admin.rs  magic.rs
Chapter07/: Cargo.toml  combinator_pattern.rs  functor_pattern.rs  lazy_pattern.rs  monad_pattern.rs
Chapter08/: .gitignore  Cargo.toml  fork1.rs  pattern1.rs  pattern2.rs  pattern3.rs  process_a.rs  process_b.rs  share1.rs  share2.rs  share3.rs  share4.rs  share5.rs  share6.rs  share7.rs  thread1.rs  thread2.rs  thread3.rs  thread4.rs  thread5.rs
Chapter09/: Cargo.toml  README.md  debugging_assert.rs  debugging_buggy_worker.rs  debugging_heartbeat.rs  debugging_result.rs  metaprogramming_ebnf.rs  metaprogramming_grammar.rs  metaprogramming_procmacro.rs  metaprogramming_procmacro2.rs  performance_constant.rs  performance_exponential.rs  performance_logarithmic.rs  performance_omission1.rs  performance_omission2.rs  performance_polynomial1.rs  performance_polynomial2.rs  performance_polynomial3.rs  performance_polynomial4.rs  performance_profiling1.rs  performance_profiling2.rs  performance_profiling3.rs  performance_profiling4.rs  performance_reference.rs  performance_release_mode.rs
Chapter09/procmacro/: Cargo.toml
Chapter09/procmacro/src/: lib.rs
Chapter09/procmacro2/: Cargo.toml
Chapter09/procmacro2/src/: lib.rs
