[package]
name = "elevator"
version = "1.0.0"

[dependencies]
floating-duration = "0.1.2"
termion = "1.0"
timebomb = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[[bin]]
name = "elevator"
path = "src/main.rs"

[[bin]]
name = "analyze"
path = "src/analyze.rs"

[[bin]]
name = "generics"
path = "generics.rs"

[[bin]]
name = "polymorphism"
path = "polymorphism.rs"

[[bin]]
name = "gadt"
path = "gadt.rs"

[[bin]]
name = "lifetimes"
path = "lifetimes.rs"

[[bin]]
name = "parameters"
path = "parameters.rs"
