[package]
name = "elevator"
version = "1.0.0"
build = "build.rs"

[dependencies]
floating-duration = "0.1.2"
termion = "1.0"
timebomb = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
libc = "0.2"

[[bin]]
name = "simulate_trip"
path = "src/simulate_trip.rs"

[[bin]]
name = "analyze_trip"
path = "src/analyze_trip.rs"

[[bin]]
name = "operate_elevator"
path = "src/operate_elevator.rs"
