[package]
name = "Chapter8"
version = "1.0.0"

[dependencies]
nix = "0.10"
thread-id = "3.3"
lazy_static = "1.0"
rand = "0.4.2"

[[bin]]
name = "process_a"
path = "process_a.rs"

[[bin]]
name = "process_b"
path = "process_b.rs"

[[bin]]
name = "fork1"
path = "fork1.rs"

[[bin]]
name = "fork2"
path = "fork2.rs"

[[bin]]
name = "fork3"
path = "fork3.rs"

[[bin]]
name = "thread1"
path = "thread1.rs"

[[bin]]
name = "thread2"
path = "thread2.rs"

[[bin]]
name = "thread3"
path = "thread3.rs"

[[bin]]
name = "thread4"
path = "thread4.rs"

[[bin]]
name = "thread5"
path = "thread5.rs"
